# evernote-migration

./: .gitignore  README.md  pyproject.toml  ruff.toml
scripts/: git-add-batch.sh
src/: constants.py  converters.py  evernote_db.py  evernote_migration.py  evernote_move.py  extractors.py  logger.py  logging.json  main.py  metadata.py  persist.py  report.py
